--- a/templates/add_entry.html
+++ b/templates/add_entry.html
@@ -3,7 +3,7 @@
   {% if session.logged_in %}
     <div class="container">
     <h2 class="page-header">Add Recipe</h2>
-    <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
+    <form action="{{ url_for('add_entry') }}" method=post enctype="multipart/form-data" class=add-entry>
       <dl>
         <dt class="control-label">Title:</dt>
         <dd><input type=text size=30 name=title class="form-control"><p></p></dd>
@@ -15,6 +15,7 @@
         <dd><input type=text size=30 name=tags class="form-control"><p></p></dd>
         <dt class="control-label">URL:</dt>
         <dd><input type=text size=30 name=url class="form-control"><p></p></dd>
+        <dd><input type=file name=file size="40" class="form-control"><p></p></dd>
         <dd><input type=submit value=Add class="btn btn-primary"></dd>
       </dl>
     </form>
