--- a/templates/edit_entry.html
+++ b/templates/edit_entry.html
@@ -3,7 +3,7 @@
   {% if session.logged_in %}
     <div class="container">
     <h2 class="page-header">Edit Recipe</h2>
-    <form action="{{ url_for('edit_entry', id=entries[0].id) }}" method=post class=edit-entry>
+    <form action="{{ url_for('edit_entry', id=entries[0].id) }}" enctype="multipart/form-data" method=post class=edit-entry>
       <dl>
         <dt class="control-label">Title:</dt>
         <dd><input type=text size=30 name=title value="{{ entries[0].title }}" class="form-control"><p></p></dd>
