--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,13 +24,13 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li>
+                        <!--<li>
                         {% if not session.logged_in %}
                             <a href="{{ url_for('login') }}">Login</a>
                         {% else %}
                             <a href="{{ url_for('logout') }}">Logout</a>
                         {% endif %}
-                        </li>
+                        </li> -->
                         {% if session.logged_in %}
                         <li>
                             <a href="{{ url_for('add_entry') }}">Add</a>
@@ -40,6 +40,21 @@
                             <a href="{{ url_for('search') }}">Search</a>
                         </li>
                     </ul>
+                    {% if not session.logged_in %}
+                    <form class="navbar-form navbar-right" role="form" action="{{ url_for('login') }}" method=post>
+                        <div class="form-group">
+                          <input type="text" placeholder="Username" name="username" class="form-control">
+                        </div>
+                        <div class="form-group">
+                          <input type="password" placeholder="Password" name="password" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    {% else %}
+                        <div class="navbar-form navbar-right">
+                            <a href={{ url_for('logout') }}><button type="input" class="btn btn-primary">Logout</button></a>
+                        </div>
+                    {% endif %}
+                    </form>
                 </div>
             </div>
         </div>
